syntax = "proto3";

option go_package = "github.com/lucasmls/ecommerce/services/products/grpc_protobuf";

package grpc;

message Product {
  int32  id          = 1;
  string name        = 2;
  string description = 3;
  int32  price       = 4;
}

message ListRequest {
  repeated int32 ids = 1;
}

message DeleteRequest {
  int32 id = 1;
}

message ListResponse {
  repeated Product data = 1;
}

message RegisterResponse {
  Product data = 1;
}

message UpdateResponse {
  Product data = 1;
}

message DeleteResponse {
  string data = 1;
}

service ProductsService {
  rpc List(ListRequest) returns (ListResponse);
  rpc Register(Product) returns (RegisterResponse);
  rpc Update(Product) returns (UpdateResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}
